@@ -161,9 +161,6 @@ public:
   void setNu(const Scalar nu);
   Scalar getNu() const;
 
-  /** Mu accessor */
-  Scalar getMu() const;
-
   /** Compute the density generator of the ellipticalal generator, i.e.
    *  the function phi such that the density of the distribution can
    *  be written as p(x) = phi(t(x-mu)R^(-1)(x-mu))                      */
