@@ -122,22 +122,22 @@ int main(int, char *[])
         Point PDFgr = distribution.computePDFGradient( point );
         fullprint << "pdf gradient     =" << PDFgr << std::endl;
         Point PDFgrFD(3);
-        PDFgrFD[0] = (Student(distribution.getNu() + eps, distribution.getMean(), distribution.getSigma(), distribution.getR()).computePDF(point) -
-                      Student(distribution.getNu() - eps, distribution.getMean(), distribution.getSigma(), distribution.getR()).computePDF(point)) / (2.0 * eps);
-        PDFgrFD[1] = (Student(distribution.getNu(), distribution.getMean() + Point(1, eps), distribution.getSigma(), distribution.getR()).computePDF(point) -
-                      Student(distribution.getNu(), distribution.getMean() - Point(1, eps), distribution.getSigma(), distribution.getR()).computePDF(point)) / (2.0 * eps);
-        PDFgrFD[2] = (Student(distribution.getNu(), distribution.getMean(), distribution.getSigma() + Point(1, eps), distribution.getR()).computePDF(point) -
-                      Student(distribution.getNu(), distribution.getMean(), distribution.getSigma() - Point(1, eps), distribution.getR()).computePDF(point)) / (2.0 * eps);
+        PDFgrFD[0] = (Student(distribution.getNu() + eps, distribution.getMu(), distribution.getSigma(), distribution.getR()).computePDF(point) -
+                      Student(distribution.getNu() - eps, distribution.getMu(), distribution.getSigma(), distribution.getR()).computePDF(point)) / (2.0 * eps);
+        PDFgrFD[1] = (Student(distribution.getNu(), distribution.getMu() + Point(1, eps), distribution.getSigma(), distribution.getR()).computePDF(point) -
+                      Student(distribution.getNu(), distribution.getMu() - Point(1, eps), distribution.getSigma(), distribution.getR()).computePDF(point)) / (2.0 * eps);
+        PDFgrFD[2] = (Student(distribution.getNu(), distribution.getMu(), distribution.getSigma() + Point(1, eps), distribution.getR()).computePDF(point) -
+                      Student(distribution.getNu(), distribution.getMu(), distribution.getSigma() - Point(1, eps), distribution.getR()).computePDF(point)) / (2.0 * eps);
         fullprint << "pdf gradient (FD)=" << PDFgrFD << std::endl;
         Point CDFgr = distribution.computeCDFGradient( point );
         fullprint << "cdf gradient     =" << CDFgr << std::endl;
         Point CDFgrFD(3);
-        CDFgrFD[0] = (Student(distribution.getNu() + eps, distribution.getMean(), distribution.getSigma(), distribution.getR()).computeCDF(point) -
-                      Student(distribution.getNu() - eps, distribution.getMean(), distribution.getSigma(), distribution.getR()).computeCDF(point)) / (2.0 * eps);
-        CDFgrFD[1] = (Student(distribution.getNu(), distribution.getMean() + Point(1, eps), distribution.getSigma(), distribution.getR()).computeCDF(point) -
-                      Student(distribution.getNu(), distribution.getMean() - Point(1, eps), distribution.getSigma(), distribution.getR()).computeCDF(point)) / (2.0 * eps);
-        CDFgrFD[2] = (Student(distribution.getNu(), distribution.getMean(), distribution.getSigma() + Point(1, eps), distribution.getR()).computeCDF(point) -
-                      Student(distribution.getNu(), distribution.getMean(), distribution.getSigma() - Point(1, eps), distribution.getR()).computeCDF(point)) / (2.0 * eps);
+        CDFgrFD[0] = (Student(distribution.getNu() + eps, distribution.getMu(), distribution.getSigma(), distribution.getR()).computeCDF(point) -
+                      Student(distribution.getNu() - eps, distribution.getMu(), distribution.getSigma(), distribution.getR()).computeCDF(point)) / (2.0 * eps);
+        CDFgrFD[1] = (Student(distribution.getNu(), distribution.getMu() + Point(1, eps), distribution.getSigma(), distribution.getR()).computeCDF(point) -
+                      Student(distribution.getNu(), distribution.getMu() - Point(1, eps), distribution.getSigma(), distribution.getR()).computeCDF(point)) / (2.0 * eps);
+        CDFgrFD[2] = (Student(distribution.getNu(), distribution.getMu(), distribution.getSigma() + Point(1, eps), distribution.getR()).computeCDF(point) -
+                      Student(distribution.getNu(), distribution.getMu(), distribution.getSigma() - Point(1, eps), distribution.getR()).computeCDF(point)) / (2.0 * eps);
         fullprint << "cdf gradient (FD)=" << CDFgrFD << std::endl;
       }
       Point quantile = distribution.computeQuantile( 0.95 );
